2006-03-01  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/java/security/sig/rsa/RSAPKCS1V1_5SignatureX509Codec.java:
	Amended class documentation.
	(encodeSignature): Emit the ASN.1 raw bytes not the DER-encoded BIT
	STRING.
	(decodeSignature): Parse the ASN.1 raw bytes of a BIT STRING and not
	a BIT STRING construct.
	* gnu/java/security/sig/dss/DSSSignatureX509Codec.java: Amended class
	documentation.
	(encodeSignature): Emit the ASN.1 raw bytes not the DER-encoded BIT
	STRING.
	(decodeSignature): Parse the ASN.1 raw bytes of a BIT STRING and not
	a BIT STRING construct.
	* gnu/java/security/jce/sig/SignatureAdapter.java (log): New field.
	(engineVerify): Added logging.

2006-02-28  Roman Kennke  <kennke@aicas.com>

	* java/awt/Component.java
	(dispatchEventImpl): Let the Toolkit dispatch global events.
	* java/awt/Container.java
	(dispatchEventImpl): Let the LightweightDispatcher handle events
	first.
	* java/awt/EventQueue.java
	(dispatchEvent): Don't do the global event dispatching here. This
	is moved to the Component.
	(globalDispatchEvent): Moved this method to Toolkit.
	* java/awt/LightweightDispatcher.java
	(instances): New field.
	(getInstance): New method. Delivers an instance of
	LightweightDispatcher.
	(LightweightDispatcher): Made default constructor private.
	(dispatchEvent): New method. Replaces the eventDispatched method.
	This now returns true when the event was actually dispatched.
	(eventDispatched): Replaced by dispatchEvent.
	(handleMouseEvent): Send MOUSE_CLICKED to the same component that
	received the last MOUSE_RELEASED.
	* java/awt/Toolkit.java
	(Toolkit): Don't register LightweightDispatcher as global event
	handler.
	(globalDispatchEvent): Moved here from EventQueue.

2006-02-27  David Daney  <ddaney@avtrex.com>

	PR classpath/25851
	* gnu/java/net/protocol/http/HTTPURLConnection.java (imports) Cleaned
	up.
	(getRequestProperties): Rewrote.

2006-02-27  David Daney  <ddaney@avtrex.com>

	PR classpath/26312